tests/semantic/fail/nil-2.tiger
let
	var a : string := nil
in
end
